--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/solid-js": "^4.4.2",
-    "@astrojs/tailwind": "^5.1.2",
-    "@fontsource/inconsolata": "^5.1.0",
-    "@fontsource/source-code-pro": "^5.1.0",
-    "astro": "^4.16.7",
-    "autoprefixer": "^10.4.20",
+    "@astrojs/solid-js": "^5.0.7",
+    "@fontsource/cinzel": "^5.2.5",
+    "@fontsource/inter": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.3",
+    "astro": "^5.6.1",
+    "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.6",
+    "daisyui": "^5.0.17",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
-    "postcss-nested": "^7.0.1",
-    "solid-js": "^1.9.3",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
-    "vite-plugin-glsl": "^1.3.0"
+    "postcss-nested": "^7.0.2",
+    "solid-js": "^1.9.5",
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5.8.3",
+    "vite-plugin-glsl": "^1.4.0"
   }
 }
