--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
     "postcss-nested": "^7.0.2",
+    "prettier": "^3.5.3",
     "solid-js": "^1.9.5",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
